# mrc_hero_bringup

./: CMakeLists.txt  README.md  package.xml  setup.py
hsrb_bringup/launch/: hsrb_bringup.launch  hsrb_bringup_common.launch  hsrb_logger.launch  hsrb_monitor.launch
hsrb_bringup/launch/include/: hsrb_bringup_common_HSRB-PHASE5.xml
launch/: hero_bringup.launch  start.launch
scripts/: hero_robot_service
src/mrc_hero_bringup/: robot_service.py
